# Team-Lobachevsky-nm-4

./: .clang-format  CMakeLists.txt  LICENSE  README.md  testpat.npat  testpat2.npat
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: CGM.hpp  SOR.hpp  SimpleIter.hpp  methods.hpp  netProcess.hpp  task.hpp  vector.hpp
src/core/src/: CGM.cpp  MBP.cpp  SOR.cpp  SimpleIter.cpp  methods.cpp  netProcess.cpp  task.cpp  vector.cpp
src/dataTypes/: CMakeLists.txt
src/dataTypes/include/dataTypes/: Tables.hpp  common.hpp  config.hpp
src/dataTypes/src/: Tables.cpp  config.cpp
src/gui/: CMakeLists.txt  Style.qss  main.cpp  widget.cpp  widget.h
src/utils/: CMakeLists.txt
src/utils/logger/: CMakeLists.txt
src/utils/logger/include/nm/utils/: logger.hpp
src/utils/logger/src/: logger.cpp
src/utils/profiler/: CMakeLists.txt
src/utils/profiler/include/nm/utils/: profiler.hpp
src/utils/profiler/src/: profiler.cpp
